--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <h1>JUN</h1>
                 <nav class="navigation-bar">
                     <ul>
-                        <li>Project</li>
-                        <li>Exprience</li>
-                        <li>Retrospect</li>
+                        <li><a>Project</a></li>
+                        <li><a>Exprience</a></li>
+                        <li><a>Retrospect</a></li>
                         <li>Contact me!</li>
                     </ul>
                 </nav>
@@ -205,6 +205,7 @@
                     </li>
                 </ul>
             </section>
+            <a class="top-button" href="#"></a>
         </main>  
         <footer>
             <div class="copyright-box">
