--- a/index.html
+++ b/index.html
@@ -41,23 +41,22 @@
                     <section class="interest-tag">나의 관심 분야 태그</section>
                     <section class="interest-tag">내가할수있는 개발언어?</section>
                     <section class="information-list">
-                        <div>
-                            <ul>
-                                <li class="telephone">TEL. 
-                                    <address>(+82) 01012345678</address>
-                                </li>
-                                <li class="blog">Blog. <a href="https://seungjjun.tistory.com/">https://seungjjun.tistory.com/</a></li>
-                                
-                            </ul>
-                        </div>
-                        <div>
-                            <ul>
-                                <li class="email">Email. 
-                                    <address>jun@seedwhale.io</address>
-                                </li>
-                                <li class="github">GitHub. <a href="https://github.com/seungjjun">https://github.com/seungjjun</a></li>
-                            </ul>
-                        </div>
+                        <ul>
+                            <li class="telephone">TEL. 
+                                <address>(+82) 01012345678</address>
+                            </li>
+                            <li class="blog">Blog. 
+                                <a href="https://seungjjun.tistory.com/">https://seungjjun.tistory.com/</a>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="email">Email. 
+                                <address>jun@seedwhale.io</address>
+                            </li>
+                            <li class="github">GitHub. 
+                                <a href="https://github.com/seungjjun">https://github.com/seungjjun</a>
+                            </li>
+                        </ul>
                     </section>     
                     </div>
                 </aside>
@@ -69,9 +68,8 @@
                         <div class="project-content">
                             <img src="./images/forest.png">
                             <span>프로젝트에 관한 설명</span>
-                            <p>
-                                스킬에관한 설명이 들어가는 영역입니다. <br>
-                                최대 두줄이 들어갑니다.
+                            <p>스킬에관한 설명이 들어가는 영역입니다.
+            최대 두줄이 들어갑니다.
                             </p>
                             <button>
                                 버튼을 눌러라 
@@ -81,16 +79,16 @@
                         <div class="project-content">
                             <img src="./images/green.jpeg">
                             <span>프로젝트에 관한 설명</span>
-                            <p>스킬에관한 설명이 들어가는 영역입니다. <br>
-                                최대 두줄이 들어갑니다.
+                            <p>스킬에관한 설명이 들어가는 영역입니다.
+           최대 두줄이 들어갑니다.
                             </p>
                             <button>버튼을 눌러라 <img src="./images/chevron-right.png"></button>
                         </div>
                         <div class="project-content">
                             <img src="./images/mint.jpeg">
                             <span>프로젝트에 관한 설명</span>
-                            <p>스킬에관한 설명이 들어가는 영역입니다. <br>
-                                최대 두줄이 들어갑니다.
+                            <p>스킬에관한 설명이 들어가는 영역입니다.
+           최대 두줄이 들어갑니다.
                             </p>
                             <button>버튼을 눌러라 <img src="./images/chevron-right.png"></button>
                         </div>
